# aws_secrets

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.py
.github/workflows/: publish.yml
aws_secrets/: __init__.py  credential.py
